gccida/g1/regmove_optimize
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/regmove_optimize/src/regmove.c:1570:4: error: expected ';' after expression
rtx v55; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/regmove_optimize/src/regmove.c:1570:5: error: use of undeclared identifier 'v55'
rtx v55; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/regmove_optimize/src/regmove.c:1572:4: error: expected ';' after expression
rtx real_insn; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/regmove_optimize/src/regmove.c:1572:5: error: use of undeclared identifier 'real_insn'; did you mean 'next_insn'?
rtx real_insn; // r12 
    ^~~~~~~~~
    next_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/regmove_optimize/src/rtl.h:1347:12: note: 'next_insn' declared here
extern rtx next_insn                    PARAMS ((rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/regmove_optimize/src/regmove.c:1573:4: error: expected ';' after expression
rtx v58; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/regmove_optimize/src/regmove.c:1573:5: error: use of undeclared identifier 'v58'
rtx v58; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/regmove_optimize/src/regmove.c:1583:4: error: expected ';' after expression
rtx v68; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/regmove_optimize/src/regmove.c:1583:5: error: use of undeclared identifier 'v68'
rtx v68; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/regmove_optimize/src/regmove.c:1586:4: error: expected ';' after expression
rtx v71; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/regmove_optimize/src/regmove.c:1586:5: error: use of undeclared identifier 'v71'
rtx v71; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/regmove_optimize/src/regmove.c:1599:4: error: expected ';' after expression
rtx v84; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/regmove_optimize/src/regmove.c:1599:5: error: use of undeclared identifier 'v84'
rtx v84; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/regmove_optimize/src/regmove.c:1600:4: error: expected ';' after expression
rtx v85; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/regmove_optimize/src/regmove.c:1600:5: error: use of undeclared identifier 'v85'
rtx v85; // r13 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/regmove_optimize/src/regmove.c:1605:4: error: expected ';' after expression
rtx v90; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/regmove_optimize/src/regmove.c:1605:5: error: use of undeclared identifier 'v90'
rtx v90; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/regmove_optimize/src/regmove.c:1620:6: error: use of undeclared identifier 'v105'
rtx *v105; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/regmove_optimize/src/regmove.c:1624:4: error: expected ';' after expression
rtx v109; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/regmove_optimize/src/regmove.c:1624:5: error: use of undeclared identifier 'v109'
rtx v109; // rsi 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/regmove_optimize/src/obj/regmove.o] Error 1
